<resources>
    <string name="app_name">Células Religiosas</string>
    <string name="txt_cadastro_nome">Nome</string>
    <string name="txt_cadastro_endereco">Endereço</string>
    <string name="txt_cadastro_telefone">Telefone</string>
    <string name="txt_cadastro_site">Site</string>
    <string name="txt_cadastro_descricao">Descrição</string>
    <string name="txt_cadastro_cep">CEP ex.53421180</string>
    <string name="txt_cadastro_busca">Buscar</string>
    <string name="txt_princial_mapa">Células no Mapa</string>
    <string name="txt_principal_cadastro">Cadastro Célula</string>
    <string name="txt_principal_Lista_celulas">Células Cadastradas</string>
    <string name="txt_principal_noticias">Notícias</string>
    <string name="txt_noticia_info">Carregando notícias...</string>

    <string name="txt_noticia_autor">Autor</string>
    <string name="txt_noticia_titulo">Titulo</string>
    <string name="txt_noticia_site">Site</string>
    <string name="txt_noticia_descricao">Descrição</string>

    <string name="menu_buscar">Buscar</string>
    <string name="menu_limpar_busca">Limpar busca</string>
</resources>
