<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="225dp">

        <ImageView
            android:id="@+id/cadastro_foto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/person"
            android:background="#00A8EC"
            />

        <Button
            android:id="@+id/cadastro_btn_foto"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/fundo_camera"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/cadastro_nome"
        android:hint="@string/txt_cadastro_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cadastro_endereco"
        android:hint="@string/txt_cadastro_endereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cadastro_telefone"
        android:hint="@string/txt_cadastro_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cadastro_site"
        android:hint="@string/txt_cadastro_site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cadastro_descricao"
        android:hint="@string/txt_cadastro_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
