<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="225dp">

            <ImageView
                android:id="@+id/noticia_imagem"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/person"
                android:background="#00A8EC"
                />

            <Button
                android:id="@+id/noticia_btn_galeria"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/fundo_camera"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/noticia_autor"
            android:hint="@string/txt_noticia_autor"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/noticia_titulo"
            android:hint="@string/txt_noticia_titulo"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/noticia_site"
            android:hint="@string/txt_noticia_site"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/noticia_descricao"
            android:hint="@string/txt_noticia_descricao"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
